# StarFish-AI

./: .gitignore  CMakeLists.txt  DeepQRS.ipynb  README  SFAI_Interface.cs  fdeep_model.json  keras_model.h5  test_dat_good.txt
SFAI_Console/: CMakeLists.txt  SFAI_Console.cpp  SFAI_Console.h
SFAI_Lib/: CMakeLists.txt  SFAI_CAPI.cpp  SFAI_CAPI.h  library.cpp  library.h
